feat: add possibility to validate projects

--- a/chrome-extension/validation.html
+++ b/chrome-extension/validation.html
@@ -9,6 +9,10 @@
   <body>
     <div class="text-center" style="width: 400px">
       <button id="validate-btn" class="btn btn-primary col-md-1">Validation</button>
+      <div class="project-mode-control custom-switch">
+        <input type="checkbox" class="custom-control-input" id="project-mode">
+        <label class="custom-control-label" for="project-mode">Project mode</label>
+      </div>
       <div id="spinner" class="preview" style="margin-left: 30%; width: 40%">
         <svg viewBox="0 0 50 50" class="spinner">
           <circle class="ring" cx="25" cy="25" r="10" />
