--- a/firefox-extension/validation.html
+++ b/firefox-extension/validation.html
@@ -3,13 +3,17 @@
   <meta charset="UTF-8" />
   <link rel="stylesheet"
         href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" 
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
         crossorigin="anonymous">
   <link rel="stylesheet" href="main.css">
   </head>
   <body>
     <div class="text-center" style="width: 400px">
       <button id="validate-btn" class="btn btn-primary col-md-1">Validation</button>
+      <div class="project-mode-control custom-switch">
+        <input type="checkbox" class="custom-control-input" id="project-mode">
+        <label class="custom-control-label" for="project-mode">Project mode</label>
+      </div>
       <div id="spinner" class="preview" style="margin-left: 30%; width: 40%">
         <svg viewBox="0 0 50 50" class="spinner">
           <circle class="ring" cx="25" cy="25" r="10" />
